--- a/roboshop.conf
+++ b/roboshop.conf
@@ -8,7 +8,7 @@ location /images/ {
   try_files $uri /images/placeholder.jpg;
 }
 location /api/catalogue/ { proxy_pass http://172.31.65.199:8080/; }
-location /api/user/ { proxy_pass http://localhost:8080/; }
+location /api/user/ { proxy_pass http://172.31.5.101:8080/; }
 location /api/cart/ { proxy_pass http://localhost:8080/; }
 location /api/shipping/ { proxy_pass http://localhost:8080/; }
 location /api/payment/ { proxy_pass http://localhost:8080/; }
